--- a/index.html
+++ b/index.html
@@ -1,54 +1,34 @@
-
-
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-
-
-	<title> Mahema Singh </title>
-	<link rel="stylesheet" type= "text/css" href= "style.css">
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width initial-scale=1">
+	<link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
+	<title>Mahema Singh | Home</title>
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway:300" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/6e47fdd73a.js"></script>
 </head>
 <body>
-	
-   <h1 id="name"> Mahema Singh </h1>
-   
-
-
-
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">Brand</a>
-     <ul class="nav navbar-nav">
-     <li>
-     <a href=#>Link</a>
-     </li>
-     <li>
-     <a href=#>Page</a>
-     </li>
-     </ul>
-
-  </div>
-</nav>
-
-
-
-<div class="row">
-  <div class="col-sm-3 col-md-2">
-    <div class="thumbnail">
-      <img src= "Mahema-Portrait 080_Fotor.jpg" alt="...">
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-  </div>
-</div>
-
+	<nav>
+		<a href="/" id="active">Home</a>
+		<a href="/about">About Me</a>
+		<a href="/projects">Projects</a>
+		<a href="/experience">Experience</a>
+		<a href="/contact">Contact</a>
+	</nav>
+	<main class="headline">
+		<p>welcome</p>
+	</main>
+	<footer class="fixed-bottom">
+		<p>&copy; Mahema Singh 2017</p>
+		<p>|</p>
+		<ul>
+			<li><a href = "https://www.linkedin.com/in/mahema-singh114" target="_blank">LinkedIn</a></li>
+			<li><a href="https://www.github.com/MahemaS27" target="_blank">Github</a></li>
+			<li><a href="https://www.instagram.com/mahemasinghs/" target="_blank">Instagram</a></li>
+		</ul>
+	</footer>
 </body>
-
 </html>
