--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Mahema Singh | Home</title>
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway:300" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src="https://use.fontawesome.com/6e47fdd73a.js"></script>
 </head>
 <body>
