--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Mahema Singh | Home</title>
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway:300" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/office/16/000000/parrot.png" />
     <script src="https://use.fontawesome.com/6e47fdd73a.js"></script>
 </head>
 <body>
