this fade in makes the difference huh

--- a/about.html
+++ b/about.html
@@ -20,8 +20,10 @@
 </nav>
 <main>
   <section>
-    <h1>Hey, I'm Mahema.</h1>
 
+    <main class = "miniheadline">
+    <h1>Hey, I'm Mahema.</h1>
+    </main>
     <p></p>
 
     <p>
