--- a/about.html
+++ b/about.html
@@ -23,7 +23,10 @@
 
     <main class = "miniheadline">
     <h1>Hey, I'm Mahema.</h1>
+      <p>I'm a 2nd year Computer Science and Finance Student at Northeastern University.</p>
     </main>
+
+
     <p></p>
 
     <p>
@@ -33,9 +36,9 @@
   <p>&copy; Mahema Singh 2018</p>
   <p>|</p>
   <ul>
-    <li><a href="https://www.linkedin.com/in/chanlis/" target="_blank">LinkedIn</a></li>
-    <li><a href="https://www.github.com/chanlis" target="_blank">Github</a></li>
-    <li><a href="https://www.instagram.com/iisachan/" target="_blank">Instagram</a></li>
+    <li><a href = "https://www.linkedin.com/in/mahema-singh114" target="_blank">LinkedIn</a></li>
+    <li><a href="https://www.github.com/MahemaS27" target="_blank">Github</a></li>
+    <li><a href="https://www.instagram.com/mahemasinghs/" target="_blank">Instagram</a></li>
   </ul>
 </footer>
 </body>
