added about summary

--- a/about.html
+++ b/about.html
@@ -23,8 +23,28 @@
 
     <main class = "miniheadline">
     <h1>Hey, I'm Mahema.</h1>
-      <p>I'm a 2nd year Computer Science and Finance Student at Northeastern University.</p>
+      <p>I'm a 2nd year Computer Science and Finance Student at
+        <a href=https://www.khoury.northeastern.edu/ target="_blank" rel="nofollow noopener noreferrer">Northeastern University.
+        </a>
+        I'm an aspiring Software Engineer and am currently looking for co-op for Fall of 2019 from September to December. This summer I will be working as Software Development Intern
+        in the Boston, MA office. My software interests include musictech & fintech, mobile app development, and working on project that promote happiness & entertainment. I love going to hackathons and collaborating with friends to create a product that we all have a shared interest in. Over my time at university, I've become really passionate about supporting women and minorities in the tech industry.
+      </p>
+
+      <p>
+       <h1>Besides Being a Student...</h1>
+       I do a whole lot of other stuff. Keeping busy and doing the things I love keeps me on task and keeps life interesting: <hr> I currently serve as the Treasurer for Northeastern Women in Technology, which I have been a part since I started college. I'm active in both Asian Student Union and South Asian Union, both organizations that I'm very passionate about. Recently, I started volunteering at EMK high school as an after-school mentor and academic tutor.
+<hr>I dance on Revolve Dance Crew and have taught workshops and choreographed for the set. <hr>On the side, I've done some really cool stuff with modeling and video editing. <hr> In my free time I love working out at the gym and doing sets at the pool.
+      </p>
+
+      <p>
+        <h1>So, That's Me.</h1>
+       If you want to know more about me, feel free to check out my experiences, projects, or contact me! Hope to meet you soon.
+      </p>
     </main>
+
+
+
+
 
 
     <p></p>
