about page edited + pictures

--- a/about.html
+++ b/about.html
@@ -18,42 +18,48 @@
   <a href="/experience">Experience</a>
   <a href="/contact">Contact</a>
 </nav>
-<main>
-  <section>
+<section>
+<main class="miniheadline">
+<div>
+  <div>
+  <h1>Hey, I'm Mahema.</h1>
+    <p>
+      <img class = about_image src="images/IMG_0102.jpeg" align="left">
+      I'm a 3rd year Computer Science and Finance Student at
+      <a href=https://www.khoury.northeastern.edu/ target="_blank" rel="nofollow noopener noreferrer">Northeastern University.
+      </a>
+      I'm an aspiring Software Engineer and am currently looking for co-op for Fall of 2020 from June to December. My software interests include musictech & fintech, full-stack,
+      and working on projects with interesting data.
+      I love working on teams that aim to create a product that has an positive impact.
+      Over my time at university, I've become really passionate about supporting women and minorities in the tech industry.
+    </p>
 
-    <main class = "miniheadline">
-    <h1>Hey, I'm Mahema.</h1>
-      <p>I'm a 2nd year Computer Science and Finance Student at
-        <a href=https://www.khoury.northeastern.edu/ target="_blank" rel="nofollow noopener noreferrer">Northeastern University.
-        </a>
-        I'm an aspiring Software Engineer and am currently looking for co-op for Fall of 2019 from September to December. This summer I will be working as Software Development Intern
-        in the Boston, MA office. My software interests include musictech & fintech, mobile app development, and working on project that promote happiness & entertainment. I love going to hackathons and collaborating with friends to create a product that we all have a shared interest in. Over my time at university, I've become really passionate about supporting women and minorities in the tech industry.
-      </p>
-
-      <p>
-       <h1>Besides Being a Student...</h1>
-       I do a whole lot of other stuff. Keeping busy and doing the things I love keeps me on task and keeps life interesting: <hr> I currently serve as the Treasurer for Northeastern Women in Technology, which I have been a part since I started college. I'm active in both Asian Student Union and South Asian Union, both organizations that I'm very passionate about. Recently, I started volunteering at EMK high school as an after-school mentor and academic tutor.
-<hr>I dance on Revolve Dance Crew and have taught workshops and choreographed for the set. <hr>On the side, I've done some really cool stuff with modeling and video editing. <hr> In my free time I love working out at the gym and doing sets at the pool.
-      </p>
-
-      <p>
-        <h1>So, That's Me.</h1>
-       If you want to know more about me, feel free to check out my experiences, projects, or contact me! Hope to meet you soon.
-      </p>
-    </main>
-
-
-
-
-
-
-    <p></p>
+    <h2>Who am I really?</h2>
 
     <p>
-  </section>
+<img class = about_image2 src="images/IMG_1097.jpg" align="right">
+      I'm a lot of things. I grew up in Plymouth, MA - hometown of America. I come from a proud Indian family and grew up celebrating Diwali and dancing to Bollywood. Me and my sister are best friends, and my whole family is
+      a bunch of comedians. I graduated as the Valedictorian of my
+    high school, and entered college with high hopes. I had no prior CS knowledge before coming to NEU, and struggled a lot my first semester. Over time however, I've learned to appreciate
+    all the late nights trying to figure out what was the difference between DFS and BFS.</p>
+
+    <h2>Outside of work...</h2>
+
+    <p>I have an addiction to extracurriculars.
+      <ul>
+     <li>I'm on Kinematix Dance Troupe - Northeastern's premiere hip hop dance troupe. I'm a traditional ballet and Indian classical dancer so joining was a great new challenge.</li>
+    <li> Currently I serve as the Vice President for Northeastern Women in Tech - an organization that I'm super passionate about.</li>
+    <li>I'm a member of Asian Student Union and South Asian Student Union. Cultural orgs were a must for me when I came to NEU.</li>
+     </ul>
+    </p>
+  </div>
+</div>
+
 </main>
+</section>
+
 <footer>
-  <p>&copy; Mahema Singh 2018</p>
+  <p id = "copyright"></p>
   <p>|</p>
   <ul>
     <li><a href = "https://www.linkedin.com/in/mahema-singh114" target="_blank">LinkedIn</a></li>
@@ -62,4 +68,5 @@
   </ul>
 </footer>
 </body>
+<script src="index.js"></script>
 </html>
