--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<p>welcome</p>
 	</main>
 	<footer class="fixed-bottom">
-		<p>&copy; Mahema Singh 2018</p>
+		<p id = "copyright"></p>
 		<p>|</p>
 		<ul>
 			<li><a href = "https://www.linkedin.com/in/mahema-singh114" target="_blank">LinkedIn</a></li>
@@ -32,4 +32,5 @@
 		</ul>
 	</footer>
 </body>
+<script src="index.js"></scriptsrc></script>
 </html>
