--- a/project.html
+++ b/project.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width initial-scale=1">
+  <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
+  <title> MS | About</title>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway:300" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
 <body>
+<nav>
+  <a href="/">Home</a>
+  <a href="/about" id="active">About</a>
+  <a href="/projects">Projects</a>
+  <a href="/experience">Experience</a>
+  <a href="/contact">Contact</a>
+</nav>
 
+
+<footer>
+  <p id = "copyright"></p>
+  <p>|</p>
+  <ul>
+    <li><a href = "https://www.linkedin.com/in/mahema-singh114" target="_blank">LinkedIn</a></li>
+    <li><a href="https://www.github.com/MahemaS27" target="_blank">Github</a></li>
+    <li><a href="https://www.instagram.com/mahemasinghs/" target="_blank">Instagram</a></li>
+  </ul>
+</footer>
 </body>
-</html>
+<script src="index.js"></script>
