--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <nav>
   <a href="/">Home</a>
   <a href="/about" id="active">About</a>
-  <a href="/project">Projects</a>
+  <a href="/projects">Projects</a>
   <a href="/experience">Experience</a>
   <a href="/contact">Contact</a>
 </nav>
