--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav>
 		<a href="/" id="active">Home</a>
 		<a href="/about">About Me</a>
-		<a href="/project">Projects</a>
+		<a href="/projects">Projects</a>
 		<a href="/experience">Experience</a>
 		<a href="/contact">Contact</a>
 	</nav>
