change active header, add html skeleton for projects

--- a/projects.html
+++ b/projects.html
@@ -13,12 +13,52 @@
 <body>
 <nav>
   <a href="/">Home</a>
-  <a href="/about" id="active">About</a>
-  <a href="/projects">Projects</a>
+  <a href="/about">About Me</a>
+  <a href="/projects" id="active">Projects</a>
   <a href="/experience">Experience</a>
   <a href="/contact">Contact</a>
 </nav>
+<section>
+<main class = "miniheadline">
+<div>
+<!-- Portfolio Gallery Grid -->
+<div class="row">
+  <div class="column">
+    <div class="content">
+      <img src="mountains.jpg" alt="Mountains" >
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <img src="lights.jpg" alt="Lights" >
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <img src="nature.jpg" alt="Nature" >
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <img src="mountains.jpg" alt="Mountains" >
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+</div>
+</div>
+</main>
+</section>
 
+
+<!-- END MAIN -->
+</div>
 
 <footer>
   <p id = "copyright"></p>
