--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
 <nav>
   <a href="/">Home</a>
-  <a href="/about" id="active">About</a>
+  <a href="/about" id="active">About Me</a>
   <a href="/projects">Projects</a>
   <a href="/experience">Experience</a>
   <a href="/contact">Contact</a>
