--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32"/>
+  <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16"/>
   <title> MS | About</title>
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway:300"
+        rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
@@ -19,41 +20,41 @@
   <a href="/contact">Contact</a>
 </nav>
 <section>
-<main class = "miniheadline">
-<div>
-<!-- Portfolio Gallery Grid -->
-<div class="row">
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Mountains" >
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
+  <main class="miniheadline">
+    <div>
+      <!-- Portfolio Gallery Grid -->
+      <div class="row">
+        <div class="column">
+          <div class="content">
+            <img src="mountains.jpg" alt="Mountains">
+            <h3>My Work</h3>
+            <p>Lorem ipsum..</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="content">
+            <img src="lights.jpg" alt="Lights">
+            <h3>My Work</h3>
+            <p>Lorem ipsum..</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="content">
+            <img src="nature.jpg" alt="Nature">
+            <h3>My Work</h3>
+            <p>Lorem ipsum..</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="content">
+            <img src="mountains.jpg" alt="Mountains">
+            <h3>My Work</h3>
+            <p>Lorem ipsum..</p>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="lights.jpg" alt="Lights" >
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="nature.jpg" alt="Nature" >
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Mountains" >
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-</div>
-</div>
-</main>
+  </main>
 </section>
 
 
@@ -61,10 +62,10 @@
 </div>
 
 <footer>
-  <p id = "copyright"></p>
+  <p id="copyright"></p>
   <p>|</p>
   <ul>
-    <li><a href = "https://www.linkedin.com/in/mahema-singh114" target="_blank">LinkedIn</a></li>
+    <li><a href="https://www.linkedin.com/in/mahema-singh114" target="_blank">LinkedIn</a></li>
     <li><a href="https://www.github.com/MahemaS27" target="_blank">Github</a></li>
     <li><a href="https://www.instagram.com/mahemasinghs/" target="_blank">Instagram</a></li>
   </ul>
